Resume, Left Box

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <section class="resume-chart" id="resume">
         <div class="divide-text">
             <p class="title">Resume</p>
-            <p class="subtitle">My formal Bio Details</p>
+            <p class="subtitle">My Formal Bio Details</p>
             <div class="lines">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -208,13 +208,20 @@
         </div>
         <div class="resume-info">
             <div class="resume-about">
-
-            </div>
-            <div class="resume-line">
-                
-            </div>
-            <div class="resume-input">
-                
+                <div class="resume-text">
+                    <div class="row"><div class="circle"></div>&nbsp;&nbsp;<p>Education</p></div>
+                    <div class="row"><div class="circle"></div>&nbsp;&nbsp;<p>Work History</p></div>
+                    <div class="row"><div class="circle"></div>&nbsp;&nbsp;<p>Programming Skill</p></div>
+                    <div class="row"><div class="circle"></div>&nbsp;&nbsp;<p>Designer Skills</p></div>
+                    <div class="row"><div class="circle"></div>&nbsp;&nbsp;<p>SEO Skills</p></div>
+                </div>
+                <div class="resume-pics">
+                    <img src="images/resume1.png" alt="resume1">
+                    <img src="images/resume2.png" alt="resume2">
+                    <img src="images/resume3.png" alt="resume3">
+                    <img src="images/resume4.png" alt="resume4">
+                    <img src="images/resume5.png" alt="resume5">
+                </div>
             </div>
         </div>
     </section>
