--- a/index.html
+++ b/index.html
@@ -223,6 +223,39 @@
                     <img src="images/resume5.png" alt="resume5">
                 </div>
             </div>
+            <div class="vlines">
+                <div class="vline1"></div>
+                <div class="vline2">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+            </div>
+            <div class="uni">
+                <div class="uni-about">
+                    <span>Envato University</span>
+                    <span>B.sc in Computer Engineer</span>
+                    <span>Reference site about Lorem Ipsum, giving information on its origins, 
+                        as well as a random Lipsum generator.</span>
+                </div>
+                <div class="uni-about">
+                    <span>Envato University</span>
+                    <span>B.sc in Computer Engineer</span>
+                    <span>Reference site about Lorem Ipsum, giving information on its origins, 
+                        as well as a random Lipsum generator.</span>
+                </div>
+                <div class="uni-about">
+                    <span>Envato University</span>
+                    <span>B.sc in Computer Engineer</span>
+                    <span>Reference site about Lorem Ipsum, giving information on its origins, 
+                        as well as a random Lipsum generator.</span>
+                </div>
+                <div class="res-date">
+                    <div>2010-2014</div>
+                    <div>2010-2014</div>
+                    <div>2010-2014</div>
+                </div>
+            </div>
         </div>
     </section>
     <section class="portfolio-works" id="portfolio">
