Portfolio Done, Pricing Started

--- a/index.html
+++ b/index.html
@@ -267,7 +267,106 @@
                 <div class="line2"></div>
             </div>
         </div>
-        
+        <div class="portfolio-section">
+            <ul>
+              <li>
+                <a class="active" href="#portfolio-1">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">ILLUSTRATION</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#portfolio-2">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">ANIMATION</span>
+                  </div>
+                </a>
+                 
+              </li>
+              <li>
+                <a href="#portfolio-3">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">APP UI</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#portfolio-4">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">WEB UI</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#portfolio-5">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">SOCIAL MEDIA</span>
+                  </div>
+                </a>
+              </li>
+              <li>
+                <a href="#portfolio-6">   <div class="portfolio-tag">
+                    <div class="portfolio-icon">
+                      <div class="portfolio-block">
+                        <div class="portfolio-circle"></div>
+                      </div>
+                    </div>
+                    <span class="portfolio-name">PRINT DESIGN</span>
+                  </div>
+                </a>
+              </li>
+            </ul>
+            <div class="portfolio-browser">
+              <div id="portfolio-1"></div>
+              <div id="portfolio-2"></div>
+              <div id="portfolio-3"></div>
+              <div id="portfolio-4"></div>
+              <div id="portfolio-5"></div>
+              <div id="portfolio-6"></div>
+            </div>
+          </div>
+    </section>
+    <section class="pricing-section" id="pricing">
+        <div class="divide-text">
+            <p class="title">Pricing</p>
+            <p class="subtitle">Check our Services package</p>
+            <div class="lines">
+                <div class="line1"></div>
+                <div class="line2"></div>
+            </div>
+        </div>
+        <div class="pricing-boxes">
+            <div class="pricing-box">
+                <div class="pricing-colored-box"></div>
+            </div>
+            <div class="pricing-box">
+                <div class="pricing-colored-box"></div>
+            </div>
+            <div class="pricing-box">
+                <div class="pricing-colored-box"></div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
