Pricing Section Finished

--- a/index.html
+++ b/index.html
@@ -358,13 +358,62 @@
         </div>
         <div class="pricing-boxes">
             <div class="pricing-box">
-                <div class="pricing-colored-box"></div>
+                <div class="pricing-colored-box1">
+                    <p class="colored-title">Basic</p>
+                    <p class="colored-price">$70</p>
+                    <p class="colored-descr">Only PSD Design</p>
+                </div>
+                <ul>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Graphic Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Web Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">UI/UX Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">HTML & CSS</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">SEO Optimize</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Business Develop</p></li>
+                </ul>
+                <button class="pricing-plan1">Choose Plan</button>
             </div>
             <div class="pricing-box">
-                <div class="pricing-colored-box"></div>
+                <div class="pricing-colored-box2">
+                    <p class="colored-title">Standard</p>
+                    <p class="colored-price">$100</p>
+                    <p class="colored-descr">Only PSD Design</p>
+                </div>
+                <ul>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Graphic Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Web Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">UI/UX Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">HTML & CSS</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">SEO Optimize</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Business Develop</p></li>
+                </ul>
+                <button class="pricing-plan2">Choose Plan</button>
             </div>
             <div class="pricing-box">
-                <div class="pricing-colored-box"></div>
+                <div class="pricing-colored-box3">
+                    <p class="colored-title">Premium</p>
+                    <p class="colored-price">$150</p>
+                    <p class="colored-descr">Only PSD Design</p>
+                </div>
+                <ul>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Graphic Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Web Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">UI/UX Design</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">HTML & CSS</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">SEO Optimize</p></li>
+                    <li><img src="images/check.png" alt="check">&nbsp;&nbsp;<p class="pricing-text">Business Develop</p></li>
+                </ul>
+                <button class="pricing-plan3">Choose Plan</button>
+            </div>
+        </div>
+    </section>
+    <section class="contact-section" id="contact">
+        <div class="divide-text">
+            <p class="title">Contact</p>
+            <p class="subtitle">Let's Keep In Touch</p>
+            <div class="lines">
+                <div class="line1"></div>
+                <div class="line2"></div>
             </div>
         </div>
     </section>
