HTML Finished, Responsive Needed

--- a/index.html
+++ b/index.html
@@ -416,6 +416,30 @@
                 <div class="line2"></div>
             </div>
         </div>
+        <div class="map-contact">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3753.305789287144!2d44.79547364541909!3d41.69892065306165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d010fcaf96f%3A0xa54989d014b0576d!2z4YOh4YOQ4YOa4YOd4YOR4YOY4YOUIOGDkeGDmOGDkA!5e0!3m2!1ska!2sge!4v1638700064414!5m2!1ska!2sge" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
+            <div class="getintouch">
+                <p>Get in Touch</p>
+                <form class="contact-input" action="">
+                    <input type="text" id="fname" name="firstname" placeholder="Your Name..">
+                    <input type="email" id="mail" name="email" placeholder="Your Email Address..">
+                    <input type="text" id="subject" name="subject" placeholder="Subject..">
+                    <input type="text" id="budget" name="budget" placeholder="Estimated Budget..">
+                </form>
+                <textarea id="smthng" name="something" placeholder="Enter your Message"></textarea>
+                <button class="contact-submit">Submit</button>
+            </div>
+        </div>
     </section>
+    <footer>
+        <p>© 2019 Createuiux. All rights reserved.</p>
+        <div class="socials">
+            <a href="https://www.facebook.com/" target="blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/" target="blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.twitter.com/" target="blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.pinterest.com/" target="blank"><i class="fab fa-pinterest-p"></i></a>
+            <a href="https://www.youtube.com/" target="blank"><i class="fab fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
