--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3753.305789287144!2d44.79547364541909!3d41.69892065306165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40440d010fcaf96f%3A0xa54989d014b0576d!2z4YOh4YOQ4YOa4YOd4YOR4YOY4YOUIOGDkeGDmOGDkA!5e0!3m2!1ska!2sge!4v1638700064414!5m2!1ska!2sge" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>
             <div class="getintouch">
                 <p>Get in Touch</p>
-                <form class="contact-input" action="">
+                    <form class="contact-input" action="fillforms">
                     <input type="text" id="fname" name="firstname" placeholder="Your Name..">
                     <input type="email" id="mail" name="email" placeholder="Your Email Address..">
                     <input type="text" id="subject" name="subject" placeholder="Subject..">
